--- a/src/internal/templates/report.tpl.html
+++ b/src/internal/templates/report.tpl.html
@@ -39,7 +39,7 @@
     </div>
     {{ range .ChangeDetails }}
     <div class="row">
-        <div class="col-md-12 bg-warning">{{ .ResourceName }}</div>
+        <div class="col-md-12 {{if .WillBeCreated}}bg-success{{end}}{{if .WillBeDestroyed}}bg-danger{{end}}{{if .WillBeUpdated}}bg-warning{{end}}">{{ .ResourceName }} will be {{if .WillBeCreated}}created{{end}}{{if .WillBeDestroyed}}destroyed{{end}}{{if .WillBeUpdated}}updated{{end}}</div>
     </div>
     <div class="row">
         <div class="col-md-6">
